2005-02-20  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (func_is_or_begins_with): Allowing
	the query "beginswith fileAs" without any value, which is formed for
	building GAL cache. Fixes #72170
	(generate_cache_handler): Checking for the LDAP message type while 
	building the cache.
	(set_mode): Setting GAL addressbook not editable, when turning online
	from offline mode.

2005-02-20  Sushma Rai <rsushma@novell.com>
	
	* storage/exchange-account.[ch] (exchange_account_is_offline_sync_set):
	Added new, to read the offline_sync value set for the account.
	(exchange_account_new): Checking for the account level offline sync setting
	and storing it.

	* storage/exchange-config-listener.c (add_esource): Checking for the 
	account level and folder level offline sync values and updating the 
	e-sources.

2005-02-19  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/Makefile.am : Now link camel with krb5 for working around
	libtool glitch on SuSE.

2005-02-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/xc-commands.c (do_folder_size_menu): Enable popping of
	folder size dialog from the menu.

2005-02-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed a build break

2005-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-exchange-search.c (exchange_body_contains): Check
	network availability. If unavail, fall back to parent search class
	body_contains() method.

2005-02-12  Arafat Medini <kinryu@silverpen.de>

	* configure.in  Readded Arabic locale ar to ALL_LINGUAS

2005-02-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_vevent) : Always
	set the TRANSP property from the busy status. Fixes #70283
	(receive_objects) : Fixed a memory leak. Fixes #72482

2005-02-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed): Removing the 
	esources for the account before asking for restart, if owa url is 