@@ -37,7 +37,7 @@
 
 #include <camel/camel.h>
 #include <e-util/e-icon-factory.h>
-#include <e-util/e-passwords.h>
+#include <libedataserverui/e-passwords.h>
 #include <libedata-book/e-data-book-factory.h>
 #include <libedata-cal/e-data-cal-factory.h>
 #include <libedataserver/e-data-server-module.h>
