@@ -1,3 +1,14 @@
+2005-02-24  Hans Petter Jansson  <hpj@novell.com>
+
+	* lib/e2k-autoconfig.c:
+	* lib/test-utils.c:
+	* storage/exchange-account.c:
+	* storage/exchange-autoconfig-wizard.c:
+	* storage/exchange-hierarchy-webdav.c:
+	* storage/main.c:
+	* storage/ximian-connector-setup.c:
+	Update the includes for e-passwords.h to reflect its new location.
+
 2005-02-20  Sushma Rai <rsushma@novell.com>
 
 	* addressbook/e-book-backend-gal.c (func_is_or_begins_with): Allowing
